# laskugeneraattori

./: .devcontainer.json  .env.example  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: build.yml
src/: error.rs  lib.rs  main.rs  merge.rs  models.rs  schema.rs  state.rs
src/api/: invoices.rs  key_extractor.rs  mod.rs  pdf.rs
src/database/: invoices.rs
src/mailgun/: invoices.rs  mod.rs
src/pdfgen/: mod.rs
src/tests/: invoices.rs  mod.rs
templates/: invoice.typ
tests/: invoices_test.rs  pdf_test.rs  rate_limit_test.rs
tests/common/: fixtures.rs  mod.rs  multipart.rs
