[package]
name = "laskugeneraattori"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

[profile.release]
lto = true

[features]
default = []
system_fonts = ["dep:fontdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-valid = { version = "0.24.0", features = [
    "basic",
    "full_garde",
    "typed_multipart",
], default-features = false }
axum_typed_multipart = "0.16.4"
bank-barcode = "0.1.0"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["env", "derive"] }
dotenv = "0.15.0"
fontdb = { version = "0.23.0", optional = true }
futures = "0.3.31"
garde = { version = "0.22.0", features = ["derive", "phone-number"] }
iban_validate = "5.0.1"
lopdf = { version = "0.38.0" }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["multipart", "rustls-tls"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44" }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "limit", "cors"] }
tower_governor = { git = "https://github.com/lajp/tower-governor", branch = "x-forwarder-for-ports", features = ["axum"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
typst = { version = "0.13.1" }
typst-assets = { version = "0.14.0", features = ["fonts"] }
typst-pdf = { version = "0.13.1" }

[dev-dependencies]
axum-test = "18.1.0"
tower = { version = "0.5.2", features = ["util"] }
